--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/algo/opti/Grid.java=UTF-8
+encoding//src/algo/opti/OptiTile.java=UTF-8
 encoding//src/algo/opti/Path.java=UTF-8
 encoding//src/method1/Board.java=UTF-8
 encoding//src/method1/Tile.java=UTF-8
